# ser-fiq

./: .gitignore  aggregator.py  face_image_quality.py  pyproject.toml  serfiq_example.py
insightface/src/: face_preprocess.py
