[tool.poetry]
    authors     = ["Philipp Terhörst", "Jan Niklas Kolf", "Naser Damer", "Florian Kirchbuchner", "Arjan Kuijper"]
    description = ""
    name        = "ser-fiq"
    readme      = "README.md"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        certifi       = "^2022.12.7"
        cycler        = "^0.11.0"
        cython        = "^0.29.33"
        graphviz      = "^0.8.4"
        idna          = "^3.4"
        imageio       = "^2.26.1"
        joblib        = "^1.2.0"
        kiwisolver    = "^1.4.4"
        loguru        = "^0.6.0"
        matplotlib    = "^3.7.1"
        networkx      = "^3.0"
        numpy         = "~1.21.0"
        opencv-python = "^4.7.0.72"
        pillow        = "^9.4.0"
        pyparsing     = "^3.0.9"
        python        = ">=3.10,<3.11"
        pywavelets    = "^1.4.1"
        requests      = "^2.28.2"
        scikit-image  = "^0.20.0"
        scikit-learn  = "^1.2.2"
        scipy         = "^1.10.1"
        six           = "^1.16.0"
        threadpoolctl = "^3.1.0"
        tifffile      = "^2023.3.21"
        urllib3       = "^1.26.15"
    polars = "^0.16.14"
    mxnet-cu117 = "^1.9.1"
    pandas = "^1.5.3"
    pyarrow = "^11.0.0"


[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]
